--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,21 @@
-supabase==2.3.4
-requests==2.31.0
-cryptography==41.0.7
-python-dotenv==1.0.0
-openai==1.3.7
-pydantic==2.5.0 
+# Supabase and database
+supabase
+
+# HTTP client for API calls
+httpx
+requests
+
+# Token encryption
+cryptography
+
+# OpenAI for sales opportunity analysis
+openai
+
+# Pydantic for data models
+pydantic
+
+# Environment utilities
+python-dotenv
+
+# Logging and error handling
+structlog 
