chore: prepare for split backend/frontend, clean up, and ensure Vercel frontend deploys

--- a/.vercelignore
+++ b/.vercelignore
@@ -9,5 +9,5 @@ __pycache__/
 *.pyd
 
 # Local development files
-.env.local
+# .env.local  # Commented out to allow Vercel to access env vars
 .env.*.local 
