--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,26 @@
 {
+  "functions": {
+    "api/oauth/pipedrive/connect.py": {
+      "runtime": "python3.9"
+    },
+    "api/oauth/pipedrive/callback.py": {
+      "runtime": "python3.9"
+    },
+    "api/oauth/azure/connect.py": {
+      "runtime": "python3.9"
+    },
+    "api/oauth/azure/callback.py": {
+      "runtime": "python3.9"
+    },
+    "api/test/hello.py": {
+      "runtime": "python3.9"
+    }
+  },
   "rewrites": [
+    {
+      "source": "/api/test/hello",
+      "destination": "/api/test/hello.py"
+    },
     {
       "source": "/api/oauth/pipedrive/connect",
       "destination": "/api/oauth/pipedrive/connect.py"
