--- a/.gitignore
+++ b/.gitignore
@@ -336,7 +336,7 @@ logs
 .localhost
 
 # Vercel
-.vercel
+.vercel/
 
 # Supabase
 .supabase/
@@ -365,3 +365,49 @@ logs
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Additional build artifacts
+*.gz
+*.gzip
+*.br
+*.brotli
+
+# Railway
+railway.toml
+
+# Docker
+.dockerignore
+
+# Cursor
+.cursor/
+
+# Additional cache directories
+.cache/
+.parcel-cache/
+.eslintcache
+.stylelintcache
+
+# Additional temporary files
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
+
+# Additional log files
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Additional environment files
+.env.*
+!.env.example
+
+# Additional build outputs
+.next/
+out/
+build/
+dist/
