--- a/env.example
+++ b/env.example
@@ -20,4 +20,8 @@ WEBHOOK_SECRET=your_webhook_validation_secret
 VERCEL_URL=your_deployment_url
 
 # Development
-NODE_ENV=development 
+NODE_ENV=development
+
+# Backend URL (Railway deployment - only needed in production)
+# In development, automatically uses http://localhost:8000
+NEXT_PUBLIC_BACKEND_URL=https://your-railway-app.up.railway.app
