--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,6 +1,75 @@
+# Python
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+eggs/
+parts/
+bin/
+var/
+sdist/
+develop-eggs/
+.installed.cfg
+lib/
+lib64/
+
+# Virtual environments
 .env
-.env.* 
+.env.*
+venv/
+env/
+ENV/
+.venv/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Git
+.git/
+.gitignore
+
+# Documentation
+README.md
+*.md
+docs/
+
+# Tests
+tests/
+test/
+pytest.ini
+.tox/
+.coverage
+htmlcov/
+
+# Logs
+*.log
+logs/
+
+# Railway specific
+railway.toml
+.railway/
+
+# Development files
+docker-compose.yml
+docker-compose.yaml
+.dockerignore
+Dockerfile 
