--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,8 +8,7 @@ supabase==2.16.0
 httpx==0.28.1
 requests==2.32.3
 
-# Token encryption
-cryptography==41.0.7
+# Token encryption (using built-in libraries - no external dependencies)
 
 # OpenAI for sales opportunity analysis
 openai==1.3.7
