--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,7 +29,7 @@ RUN useradd --create-home --shell /bin/bash app && \
 WORKDIR /app
 
 # Copy application code
-COPY --chown=app:app app ./app
+COPY --chown=app:app app/ ./
 
 # Switch to non-root user
 USER app
@@ -42,4 +42,4 @@ HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
 EXPOSE 8000
 
 # Start the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"] 
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"] 
