--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -28,8 +28,8 @@ RUN useradd --create-home --shell /bin/bash app && \
 
 WORKDIR /app
 
-# Copy application code
-COPY --chown=app:app app/ ./
+# Copy the entire backend directory structure
+COPY --chown=app:app . .
 
 # Switch to non-root user
 USER app
@@ -42,4 +42,4 @@ HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
 EXPOSE 8000
 
 # Start the application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"] 
+CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"] 
