--- a/env.example
+++ b/env.example
@@ -21,4 +21,4 @@ VERCEL_URL=your_deployment_url
 
 # Backend URL (Railway deployment - only needed in production)
 # In development, automatically uses http://localhost:8000
-NEXT_PUBLIC_BACKEND_URL=https://your-railway-app.up.railway.app
+NEXT_PUBLIC_BACKEND_URL=https://supa-vercel-infra-production.up.railway.app
